# redflash

./: .editorconfig  CMakeLists.txt  NVIDIA-OptiX-SDK-samples.html  README.md  sampleConfig.h.in
CMake/: ConfigCompilerFlags.cmake  FindCUDA.cmake  FindMDLWrapper.cmake  FindSUtilGLUT.cmake  Macros.cmake
CMake/FindCUDA/: run_nvcc.cmake
data/: CedarCity.ppm  Kumanomi.mtl  daisy1.mtl  example_df.mdl  grass1.mtl  grass6.mtl  nvidia_logo.ppm  optixMDLDisplacement.mdl  optixMDLExpressions.mdl  optixSSIMPredictor_test.ppm
data/Ice_Lake/: Ice_Lake.ibl
data/particles/: particles.0001.txt  particles.0002.txt  particles.0003.txt  particles.0004.txt  particles.0005.txt  particles.0006.txt  particles.0007.txt  particles.0008.txt  particles.0009.txt  particles.0010.txt  particles.0011.txt  particles.0012.txt  particles.0013.txt  particles.0014.txt  particles.0015.txt  particles.0016.txt  particles.0017.txt  particles.0018.txt  particles.0019.txt  particles.0020.txt  particles.0021.txt  particles.0022.txt  particles.0023.txt  particles.0024.txt  particles.0025.txt
mdl_wrapper/: CMakeLists.txt  mdl_helper.cpp  mdl_helper.h  mdl_wrapper.cpp
optixBuffersOfBuffers/: CMakeLists.txt  optixBuffersOfBuffers.cpp  optixBuffersOfBuffers.cu  sphere_texcoord.cu
optixCallablePrograms/: CMakeLists.txt  optixCallablePrograms.cpp  optixCallablePrograms.cu
optixCompressedTexture/: CMakeLists.txt  draw_texture.cu  optixCompressedTexture.cpp
optixConsole/: CMakeLists.txt  NvCudaDriverApi.rules  OptixConsole.sln  optixConsole.cpp  optixConsole.vcproj  phong.cu  sphere.cu
optixDenoiser/: CMakeLists.txt  optixDenoiser.cpp  optixDenoiser.cu
optixDeviceQuery/: CMakeLists.txt  optixDeviceQuery.cpp
optixDynamicGeometry/: CMakeLists.txt  optixDynamicGeometry.cpp
optixGeometryTriangles/: CMakeLists.txt  checker.cu  optixGeometryTriangles.cpp  optixGeometryTriangles.cu  parallelogram.cu
optixHello/: CMakeLists.txt  draw_color.cu  optixHello.cpp
optixInstancing/: CMakeLists.txt  optixInstancing.cpp
optixMDLDisplacement/: CMakeLists.txt  common.h  geometry_programs.cu  materials.cu  optixMDLDisplacement.cpp
optixMDLExpressions/: CMakeLists.txt  camera.cu  mdl_material.cu  optixMDLExpressions.cpp  parallelogram_tangent.cu  phong.h
optixMDLSphere/: CMakeLists.txt  camera.cu  mdl_ibl.cu  mdl_textures.cu  optixMDLSphere.cpp  random.h  shared_structs.h  sphere_texcoord_tangent.cu
optixMeshViewer/: CMakeLists.txt  helpers.h  optixMeshViewer.cpp
optixMotionBlur/: CMakeLists.txt  README.md  accum_camera_mblur.cu  normal_shader.cu  normal_shader_with_shadows.cu  optixMotionBlur.cpp  pinhole_camera.cu  triangle_mesh_mblur.cu
optixParticles/: CMakeLists.txt  accum_camera.cu  optixParticles.cpp  particles_geometry.cu  particles_material.cu
optixPathTracer/: CMakeLists.txt  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h
optixPrimitiveIndexOffsets/: CMakeLists.txt  optixPrimitiveIndexOffsets.cpp  triangle_mesh.cu
optixRaycasting/: CMakeLists.txt  Common.h  OptiXRaycastingContext.cpp  OptiXRaycastingContext.cu  OptiXRaycastingContext.h  optixRaycasting.cpp  optixRaycastingKernels.cu  optixRaycastingKernels.h
optixRaymarching/: CMakeLists.txt  optixRaymarching.cpp  optixRaymarching.cu  optixRaymarching.h
optixSSIMPredictor/: CMakeLists.txt  optixSSIMPredictor.cpp  optixSSIMPredictor.cu
optixSelector/: CMakeLists.txt  checkerboard.cu  optixSelector.cpp  selector_example.cu
optixSphere/: CMakeLists.txt  optixSphere.cpp
optixSpherePP/: CMakeLists.txt  constantbg.cu  optixSpherePP.cpp
optixTextureSampler/: CMakeLists.txt  draw_texture.cu  optixTextureSampler.cpp
optixTutorial/: CMakeLists.txt  box.cu  optixTutorial.cpp  tutorial.h  tutorial0.cu  tutorial1.cu  tutorial10.cu  tutorial11.cu  tutorial2.cu  tutorial3.cu  tutorial4.cu  tutorial5.cu  tutorial6.cu  tutorial7.cu  tutorial8.cu  tutorial9.cu
optixWhitted/: CMakeLists.txt  glass.cu  optixWhitted.cpp  sphere_shell.cu
primeInstancing/: CMakeLists.txt  primeInstancing.cpp
primeMasking/: CMakeLists.txt  primeCommon.h  primeMasking.cpp
primeMultiBuffering/: CMakeLists.txt  primeKernels.cu  primeMultiBuffering.cpp
primeMultiGpu/: CMakeLists.txt  primeMultiGpu.cpp  primeMultiGpuKernels.cu
primeSimple/: CMakeLists.txt  primeSimple.cpp
primeSimplePP/: CMakeLists.txt  primeCommon.cpp  primeSimplePP.cpp
putil/: Buffer.h  Preprocessor.h
redflash/: CMakeLists.txt  bsdf_diffuse.cu  bsdf_disney.cu  intersect_raymarching.cu  intersect_sphere.cu  intersection_refinement.h  redflash.cpp  redflash.cu  redflash.h
redflash/glm/: glm.hpp
redflash/glm/detail/: _fixes.hpp  compute_vector_relational.hpp  setup.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp  type_vec4.inl
support/mdl-sdk/include/mi/neuraylib/: target_code_types.h
support/mdl_wrapper/include/: mdl_wrapper.h
support/mdl_wrapper/lib/: mdl_wrapper.lib
sutil/: Arcball.cpp  Arcball.h  CMakeLists.txt  HDRLoader.cpp  HDRLoader.h  Mesh.cpp  Mesh.h  OptiXMesh.cpp  OptiXMesh.h  PPMLoader.cpp  PPMLoader.h  sutil.cpp  sutil.h  sutilapi.h
